[gd_scene load_steps=9 format=2]

[ext_resource path="res://scene2D/kickedPopup.gd" type="Script" id=1]
[ext_resource path="res://assets/images/interface/close_btn_x64.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.160784, 0.592157, 0.968627, 0.262745, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 580

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/normal.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/normal.ttf"

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = SubResource( 5 )

[node name="kickedPopup" type="Node2D"]
position = Vector2( 230, 100 )
script = ExtResource( 1 )

[node name="style" type="Node2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColorRect3" type="ColorRect" parent="style"]
margin_left = 7.0
margin_top = 7.0
margin_right = 587.0
margin_bottom = 387.0
color = Color( 0, 0, 0, 0.145098 )

[node name="ColorRect" type="ColorRect" parent="style"]
margin_right = 580.0
margin_bottom = 380.0
color = Color( 0.172549, 0.192157, 0.196078, 1 )

[node name="ColorRect2" type="ColorRect" parent="style"]
margin_right = 580.0
margin_bottom = 70.0
color = Color( 0.164706, 0.227451, 0.243137, 1 )

[node name="ColorRect4" type="ColorRect" parent="style"]
margin_top = 69.0
margin_right = 580.0
margin_bottom = 71.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect6" type="ColorRect" parent="style"]
margin_right = 580.0
margin_bottom = 2.0

[node name="ColorRect7" type="ColorRect" parent="style"]
margin_right = 2.0
margin_bottom = 379.0
color = Color( 1, 1, 1, 0.392157 )

[node name="ColorRect8" type="ColorRect" parent="style"]
margin_left = 578.0
margin_right = 580.0
margin_bottom = 379.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect5" type="ColorRect" parent="style"]
margin_top = 378.0
margin_right = 580.0
margin_bottom = 380.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="style"]
scale = Vector2( 1, 68.604 )
texture = SubResource( 2 )
centered = false

[node name="title" type="RichTextLabel" parent="."]
margin_top = 17.0
margin_right = 580.0
margin_bottom = 59.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]YOU WAS KICKED"
text = "YOU WAS KICKED"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="why" type="RichTextLabel" parent="."]
margin_left = 3.0
margin_top = 175.0
margin_right = 580.0
margin_bottom = 357.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]Se connecter"
text = "Se connecter"
scroll_active = false

[node name="btnClose" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.360784 )
position = Vector2( 517, 4 )
texture = ExtResource( 2 )
centered = false

[node name="btn_close" type="Control" parent="btnClose"]
margin_right = 64.0
margin_bottom = 64.0
[connection signal="gui_input" from="btnClose/btn_close" to="." method="_on_btn_close_gui_input"]
[connection signal="mouse_entered" from="btnClose/btn_close" to="." method="_on_btn_close_mouse_entered"]
[connection signal="mouse_exited" from="btnClose/btn_close" to="." method="_on_btn_close_mouse_exited"]
